# Facial-Recognition-Sample

./: CMakeLists.txt  README.md  properties.txt
src/: ApplicationManager.cpp  ApplicationManager.h  CameraUtilities.cpp  Utils.cpp  Utils.h  adddialog.cpp  adddialog.h  adddialog.ui  instalationdialog.cpp  instalationdialog.h  instalationdialog.ui  loadingscreen.ui  main.cpp  sample.cpp  sample.h  sample.qrc  sample.ui  settings.cpp  settings.h  settings.ui  validate.cpp  validate.h  validate.ui  viewdialog.cpp  viewdialog.h  viewdialog.ui
